apps/invokeai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invokeai-web
  namespace: invokeai
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: invokeai
  ports:
    - name: http
      port: 9090
      protocol: TCP
